bk_ida/gccida/g1/spelling_length
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/spelling_length/src/c-typeck.c:5037:6: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v1 = spelling_0; 
     ^~~~~~~~~~
     spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/spelling_length/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/spelling_length/src/c-typeck.c:5038:23: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
if ( spelling_base >= spelling_0 ) 
                      ^~~~~~~~~~
                      spelling
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/spelling_length/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/spelling_length/src/obj/c-typeck.o] Error 1
